--- a/.gitignore
+++ b/.gitignore
@@ -232,10 +232,7 @@ pip-selfcheck.json
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.idea/*
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
