celery schedule applied

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ temp_photo/
 
 
 ### Django ###
+*.pid
 *.log
 *.pot
 *.pyc
@@ -26,3 +27,6 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
+
+## Celery ###
+celerybeat-schedule
