face recognition complete

--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -4,4 +4,6 @@ WORKDIR /usr/src/app
 COPY ./config/requirements.txt ./
 RUN pip3 install --no-cache-dir -r requirements.txt
 
+COPY ./app ./
+
 CMD [ "python3", "-u", "./bridge.py"]
