--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -40,29 +40,12 @@ http {
         #access_log  logs/host.access.log  main;
 
          location / {
-            proxy_pass http://ohmygirl;
+            proxy_pass http://ohmygirl:3000;
         }
 
         #error_page  404              /404.html;
 
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
+       #    proxy_pass   http://127.0.0.1;
         #}
 
     }
