--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
         ports:
             - "3000"
         volumes: 
-            - ./image_db:/usr/src/app/image_dbo
+            - ./image_db:/usr/src/app/image_db
         env_file: 
             - .env
 
