--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,22 @@ data/
 .env
 train/
 
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
+
 ### Node ###
 # Logs
 logs
