--- a/docker-compose-localmongo.yaml
+++ b/docker-compose-localmongo.yaml
@@ -10,6 +10,16 @@ services:
             - ./image_db:/usr/src/app/image_db
         env_file: 
             - .env
+
+    mongodb:
+        image: mongo:4.2.6
+        volumes: 
+            - ./mongodb/data/db:/data/db
+        ports:
+            - "27019:27019"
+        env_file:
+            - .env
+        command: mongod --port 27019
         
     crawler:
         build: ./crawler
