face server applied

--- a/crawler/app/package.json
+++ b/crawler/app/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.738.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "form-data": "^3.0.0",
     "mongoose": "^5.10.0",
     "puppeteer": "^5.2.1"
   }
