--- a/face/config/requirements.txt
+++ b/face/config/requirements.txt
@@ -1,12 +1,2 @@
-click==7.1.2
-cmake==3.18.0
-dlib==19.21.0
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-joblib==0.16.0
-numpy==1.19.1
-Pillow==7.1.1
-pymongo[tls,srv]==3.10.1
+Flask==1.1.2
 python-dotenv==0.14.0
-scikit-learn==0.21.3
-scipy==1.5.2
