--- a/omg-front/config/nginx.conf
+++ b/omg-front/config/nginx.conf
@@ -51,4 +51,27 @@ http {
         #}
 
     }
+
+    upstream backend {
+    server 127.0.0.1:4000;
+    }
+
+    server {
+    listen 80;
+    server_name api.example.loc;
+    }
+
+    location / {
+        proxy_set_header   Host            $http_host;
+        proxy_set_header   Upgrade         $http_upgrade;
+        proxy_set_header   Connection      "upgrade";
+        proxy_set_header   X-Real-IP       $remote_addr;
+        proxy_set_header   X-NginX-Proxy   true;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_redirect     off;
+        proxy_pass         http://backend;
+  }
 }
+
+
