--- a/face/Dockerfile
+++ b/face/Dockerfile
@@ -1,5 +1,5 @@
-FROM face
-    
+FROM sigmarion1/face:0.1
+
 WORKDIR /usr/src/app
 COPY ./config/requirements.txt ./
 RUN pip3 install --no-cache-dir -r requirements.txt
