--- a/crawler/app/package.json
+++ b/crawler/app/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "form-data": "^3.0.0",
     "mongoose": "^5.10.0",
-    "puppeteer": "^5.2.1"
+    "puppeteer": "^5.2.1",
+    "sharp": "^0.26.0"
   }
 }
