--- a/dev.yaml
+++ b/dev.yaml
@@ -5,10 +5,10 @@ services:
     volumes:
       - ./mongodb/data/db:/data/db
     ports:
-      - "27019:27019"
+      - "${MONGO_PORT}:${MONGO_PORT}"
     env_file:
       - .env
-    command: mongod --port 27019
+    command: mongod --port ${MONGO_PORT}
 
   crawler:
     build: ./crawler
@@ -26,14 +26,14 @@ services:
     env_file:
       - .env
     ports:
-      - "3001:3001"
+      - "${FACE_PORT}:${FACE_PORT}"
 
   omg-back:
     build: ./omg-back
     depends_on:
       - mongodb
     ports:
-      - "3000:3000"
+      - "${BACK_PORT}:${BACK_PORT}"
     volumes:
       - ./image_db:/usr/src/app/image_db
     env_file:
