back port change

--- a/omg-front/config/nginx.conf
+++ b/omg-front/config/nginx.conf
@@ -51,6 +51,23 @@ http {
         #}
 
     }
+
+    upstream backend {
+        server omg-back:3001
+    }
+
+    server {
+        listen  8080;
+        server_name ohmydb.com www.ohmydb.com;
+
+        location / {
+            proxy_pass         http://backend;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
 }
 
 
