--- a/omg-front/config/nginx.conf
+++ b/omg-front/config/nginx.conf
@@ -31,6 +31,10 @@ http {
 
     #gzip  on;
 
+    upstream docker-backend {
+        server omg-back:3001;
+    }
+
     server {
         listen       80;
         server_name  _;
@@ -52,16 +56,12 @@ http {
 
     }
 
-    upstream backend {
-        server omg-back:3001;
-    }
-
     server {
         listen  8080;
-        server_name ohmydb.com www.ohmydb.com;
+        server_name _;
 
         location / {
-            proxy_pass         http://backend;
+            proxy_pass         http://omg-back:3001;
             proxy_redirect     off;
             proxy_set_header   Host $host;
             proxy_set_header   X-Real-IP $remote_addr;
