back port change

--- a/omg-front/config/nginx.conf
+++ b/omg-front/config/nginx.conf
@@ -37,7 +37,7 @@ http {
 
     server {
         listen       80;
-        server_name  _;
+        server_name  ohmydb.com;
 
         #charset koi8-r;
 
@@ -57,8 +57,8 @@ http {
     }
 
     server {
-        listen  8080;
-        server_name _;
+        listen  80;
+        server_name back.ohmydb.com;
 
         location / {
             proxy_pass         http://omg-back:3001;
