restore aws amplify setting

--- a/amplify.yml
+++ b/amplify.yml
@@ -9,7 +9,7 @@ applications:
           commands:
             - npm run build
       artifacts:
-        baseDirectory: front/build
+        baseDirectory: build
         files:
           - "**/*"
       cache:
