--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://horizon-ui.com/horizon-ui-chakra",
-  "name": "horizon-ui-chakra",
+  "homepage": "https://ohmydb.com",
+  "name": "ohmydb",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
