--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.7.2
 Django==4.2.5
+django-filter==23.3
+djangorestframework==3.14.0
 gunicorn==21.2.0
+mysqlclient==2.2.0
 packaging==23.1
+python-dotenv==1.0.0
+pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.8.0
