--- a/back/requirements_docker.txt
+++ b/back/requirements_docker.txt
@@ -3,12 +3,12 @@ click==8.1.7
 Django==4.2.5
 django-filter==23.3
 djangorestframework==3.14.0
-dlib==19.24.99
-face-recognition==1.3.0
-face-recognition-models==0.3.0
+# dlib==19.24.99
+# face-recognition==1.3.0
+# face-recognition-models==0.3.0
 gunicorn==21.2.0
-mysqlclient==2.2.0
-numpy==1.26.0
+mysqlclient==2.1.1
+numpy==1.24.4
 packaging==23.1
 Pillow==10.0.1
 python-dotenv==1.0.0
