--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -3,15 +3,14 @@ click==8.1.7
 Django==4.2.5
 django-filter==23.3
 djangorestframework==3.14.0
-dlib==19.24.99
-face-recognition==1.3.0
-face-recognition-models==0.3.0
+scikit-learn==1.3.1
 gunicorn==21.2.0
-mysqlclient==2.2.0
-numpy==1.26.0
+mysqlclient==2.1.1
+numpy==1.24.4
 packaging==23.1
 Pillow==10.0.1
 python-dotenv==1.0.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 typing_extensions==4.8.0
+requests==2.31.0
