--- a/back/.env.sample
+++ b/back/.env.sample
@@ -1,4 +1,6 @@
-DB_HOST=db.host.com
-DB_USER=root
+DB_HOST=OH_MY_DB_HOST
+DB_USER=SUPER_POWER_USER
 DB_PASSWORD=AWESOME_PASSWORD
-DB_PORT=3306
+DB_PORT=SEA_PORT
+AWS_ACCESS_KEY_ID=BEAUTIFUL_ID
+AWS_SECRET_ACCESS_KEY=FANTASTIC_KEY
