--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 Django==4.2.5
 django-filter==23.3
+django-cors-headers==4.2.0
 djangorestframework==3.14.0
 scikit-learn==1.3.1
 gunicorn==21.2.0
