--- a/back/requirements_develop.txt
+++ b/back/requirements_develop.txt
@@ -1,22 +1,35 @@
 # To develop in local python enviroment(like venv or pyenv), you have to install dlib, face-recognition, face-recognition-models additionally.
 # These packages are include in animcogn/face_recognition docker image.
 asgiref==3.7.2
+boto3==1.28.53
+botocore==1.31.53
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.7
 Django==4.2.5
+django-cors-headers==4.2.0
 django-filter==23.3
 djangorestframework==3.14.0
 dlib==19.24.99
 face-recognition==1.3.0
 face-recognition-models==0.3.0
-scikit-learn==1.3.1
 gunicorn==21.2.0
+idna==3.4
+jmespath==1.0.1
+joblib==1.3.2
 mysqlclient==2.2.0
 numpy==1.26.0
 packaging==23.1
 Pillow==10.0.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
-sqlparse==0.4.4
-typing_extensions==4.8.0
 requests==2.31.0
-boto3==1.28.53
+s3transfer==0.6.2
+scikit-learn==1.3.1
+scipy==1.11.2
+six==1.16.0
+sqlparse==0.4.4
+threadpoolctl==3.2.0
+typing_extensions==4.8.0
+urllib3==1.26.16
