hide django secret key

--- a/back/.env.sample
+++ b/back/.env.sample
@@ -4,3 +4,4 @@ DB_PASSWORD=AWESOME_PASSWORD
 DB_PORT=SEA_PORT
 AWS_ACCESS_KEY_ID=BEAUTIFUL_ID
 AWS_SECRET_ACCESS_KEY=FANTASTIC_KEY
+DJANGO_SECRET_KEY=PERFECT_KEY
