--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "3.35.2",
+    "axios": "^1.5.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -28,12 +29,15 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-is": "^18.0.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
+    "swr": "^2.2.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
