add test records detail page

--- a/front/package.json
+++ b/front/package.json
@@ -52,12 +52,7 @@
   "resolutions": {
     "react-error-overlay": "6.0.9"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "eslintConfig": {},
   "browserslist": {
     "production": [
       ">0.2%",
